objects/Kickbox_Verification__c.object
<CustomObject>
    <fields>
        <fullName>Call_Kickbox_API_After_10_minutus__c</fullName>
        <label>Call Kickbox API After 10 minutus</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Kickbox Verifications</relationshipLabel>
        <relationshipName>Kickbox_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_From_Journey_Importer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create From Journey Importer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Batch_Run_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record of Kickbox verification will create on a daily basis when batch will get run.
If that batch gets run successfully then the value will be true. If not then next day's batch will include last day's created leads and contacts also.</description>
        <inlineHelpText>Record of Kickbox verification will create on a daily basis when batch will get run.
If that batch gets run successfully then the value will be true. If not then next day's batch will include last day's created leads and contacts also.</inlineHelpText>
        <label>Daily Batch Run Successfully</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>Batch run for Contacts and Leads where Created Date is greater than From Date.</description>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generate_Journey__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_API_Request_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox API Request Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Job_Id__c</fullName>
        <label>Kickbox Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Kickbox_API_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need To Send Kickbox API Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>Batch will run for contacts and leads where created date is less than To Date.</description>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Used_Re_Architect_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For work with the new logic, use in code only.</description>
        <inlineHelpText>For work with the new logic, use in code only.</inlineHelpText>
        <label>Used Re Architect Logic</label>
        <type>Checkbox</type>
    </fields>
    <description>Verified Job Ids. With those Ids call 3rd API.</description>
    <label>Kickbox Verification</label>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>Kickbox Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kickbox Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Create_From_Journey_Importer__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Kickbox_Job_Id__c</columns>
        <columns>Daily_Batch_Run_Successfully__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Call_Kickbox_API_After_10_minutus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/8/2018 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>